# decentrarent

./: .env.example  .gitignore  CLAUDE.md  README.md  TECHNICAL.md  Taskfile.yml  admin-wallet.json  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json
backend/: .air.toml  CLAUDE.md  Dockerfile  go.mod  go.sum
backend/docs/: docs.go  swagger.json  swagger.yaml
backend/migrations/: 000001_create_users.up.sql  000002_create_properties.down.sql  000002_create_properties.up.sql  000003_create_conversations_and_messages.down.sql  000003_create_conversations_and_messages.up.sql  000004_create_property_media.down.sql  000004_create_property_media.up.sql  000005_create_orders.down.sql  000005_create_orders.up.sql  000006_create_order_history_and_payments.down.sql  000006_create_order_history_and_payments.up.sql  000007_alter_orders_legacy_columns.down.sql  000007_alter_orders_legacy_columns.up.sql  000007_onchain_signature_field.up.sql  000008_rename_properties_owner_to_landlord.down.sql  000008_rename_properties_owner_to_landlord.up.sql  (+9 more)
blockchain/: CLAUDE.md
blockchain/lease/programs/lease/: Cargo.toml
blockchain/lease/programs/lease/src/: error.rs  lib.rs
blockchain/lease/programs/lease/src/models/: accounts.rs  event.rs  mod.rs  status.rs
blockchain/lease/programs/lease/tests/: integration_test.rs
centrifugo/: config.json
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
mobile/: Dockerfile  README.md  app.json  metro.config.js  package-lock.json  package.json  tailwind.config.js
(+128 files in other folders)
